src/styles/styles.scss
:root {
  --primary-600: #7c3aed;
  --primary-300: #c4b5fd !important;
  --neutral-50: #f9fafb;
}

body {
  overflow-x: hidden;
}

.container-border-bottom {
  border-bottom: 1px solid #efefef;
}

.icon {
  color: var(--primary-600);
  height: 32px;
}

.circle-background {
  background: var(--primary-300);
  border-radius: 100%;
  margin-left: 50px;
  margin-right: -50px;
  width: 592px;
  height: 592px;

  .static-image {
    position: absolute;
    height: 447px;
    width: 828px !important;
    max-width: 2000px;
    top: calc(50% - 276px);
    left: 70px;
    top: 70px;
    box-shadow: 0px 12px 40px 0px rgba(41, 41, 42, 0.16);
    border-radius: 8px;
  }
}

@media screen and (max-width: 1024px) {
  .hero-text {
    padding-right: 150px;
  }
  .circle-background {
    position: absolute !important;
    z-index: -1;
    width: 300px;
    height: 300px;
    right: -100px;
    .static-image {
      width: 414px !important;
      height: 223.5px;
      left: 38px;
      top: 38px;
    }
  }
}

@media screen and (max-width: 640px) {
  .hero-text {
    padding-right: 0;
  }
  .circle-background {
    position: relative !important;
    margin: 0;
    display: block !important;
    margin: 0 auto;
    left: 0;
    margin-top: 24px;
  }
}

.approach-section {
  position: relative;
  .approach-background {
    width: 200%;
    height: 100%;
    position: absolute;
    top: 0;
    left: -50%;
    background: linear-gradient(
      to bottom right,
      var(--primary-300) 20%,
      var(--primary-600) 80%
    );
    transform: rotate(-5deg);
  }

  .image-circle {
    width: 80px;
    height: 80px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 100px;
    background: var(--neutral-50);
  }

  .dotted-line {
    border-top: 3px dotted var(--primary-300);
    opacity: 0.4; /* You can adjust the thickness and color as needed */
    width: 50%;
    position: absolute;
    top: 40px;
    left: 50%;
    z-index: -1;
  }
  .dotted-line.left {
    left: 0px;
  }

  @media screen and (max-width: 1024px) {
    .dotted-line {
      display: none;
    }
  }
}

.benefits-section {
  .image-circle {
    display: flex;
    width: 72px;
    height: 72px;
    padding: 24px;
    justify-content: center;
    align-items: center;
    flex-shrink: 0;
    border-radius: 100px;
    background: var(--neutral-50);
  }
}

.powered-by-section {
  img {
    display: flex;
    padding: 8px;
    align-items: center;
    gap: 10px;
    width: 48px;
    height: 48px;
  }
}

.talk-to-us-section {
  background: var(--primary-600);
}

footer {
  .footer-logo {
    position: relative;
    display: flex;
    justify-content: center;
    .line {
      width: 100%;
      height: 1px;
      background: #ffffff;
      position: absolute;
      top: 50%;
      opacity: 0.2;
    }
    img {
      height: 42px;
      width: auto;
      z-index: 99;
      background: rgb(0 0 0 / var(--tw-bg-opacity));
      padding: 0 24px;
    }
  }
  .all-rigths {
    position: absolute;
    width: 100%;
    text-align: center;
    bottom: 32px;
  }
}

